[package]
name = "llvmpipe_ci_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = { version = "27.0.1", default-features = false, features = ["wgsl", "vulkan", "metal"] }
bytemuck = { version = "1.14.0", features = ["derive"] }
pollster = "0.3.0"
image = { version = "0.24", default-features = false, features = ["png"] }
